tutorial/level_2/M6_developer_experience/4_app_health_autoscaling/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: probe-demo
  labels:
    app: probe-demo
    tutorial-level: "2"
    tutorial-module: "M6"
spec:
  selector:
    app: probe-demo
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
