tutorial/level_2/M6_developer_experience/4_app_health_autoscaling/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: probe-demo
  labels:
    app: probe-demo
    tutorial-level: "2"
    tutorial-module: "M6"
spec:
  to:
    kind: Service
    name: probe-demo
  port:
    targetPort: 8080
